remove magic eraser name

--- a/inpainting_eraser/1_inpainting_eraser_using_genai.ipynb
+++ b/inpainting_eraser/1_inpainting_eraser_using_genai.ipynb
@@ -5,17 +5,17 @@
    "id": "533297c4",
    "metadata": {},
    "source": [
-    "## Creative Content Assisted by Generative AI using Amazon SageMaker: Magic Eraser\n",
+    "## Creative Content Assisted by Generative AI using Amazon SageMaker: Inpainting Eraser\n",
     "---\n",
-    "In this notebook, we will demonstrate how to create a magic eraser that can remove any object from an image using Amazon SageMaker. This tool can come in handy when you need to remove photobombs, get rid of unwanted objects, or even clean up backgrounds. \n",
+    "In this notebook, we will demonstrate how to create a Inpainting eraser that can remove any object from an image using Amazon SageMaker. This tool can come in handy when you need to remove photobombs, get rid of unwanted objects, or even clean up backgrounds. \n",
     "\n",
-    "Our solution for magic eraser involves two main steps. The first step is to create a segmentation mask of the object to be removed based on a pixel coordinate input. Then second step is to “erase”, which fills the area using the contexts from the rest of the image. \n",
+    "Our solution for inpainting eraser involves two main steps. The first step is to create a segmentation mask of the object to be removed based on a pixel coordinate input. Then second step is to “erase”, which fills the area using the contexts from the rest of the image. \n",
     "\n",
     "To generate segmentation, we used a foundation model developed by Meta Research called **[Segment Anything Model (SAM)](https://segment-anything.com/) - Apache-2.0 license**. This model is trained on a massive dataset called SA-1B with over 11 million images and 1.1 billion segmentation masks.  This massive scale gave Sam model unprecedented ability to identify and isolate objects from an image out of the box without training.\n",
     "\n",
     "To erase the object, we used a second model called **[Resolution-robust Large Mask Inpainting with Fourier Convolutions (LaMa)](https://advimman.github.io/lama-project/) - Apache-2.0 license** developed by Roman Suvorov. This model can fill in missing parts of images caused by irregular masks.\n",
     "\n",
-    "**Note: please run the `0_setup.ipynb` notebook first before starting on this example**"
+    "**Note: please run the `0_setup.ipynb` notebook first before starting on this example. We recommend to use pytorch kernel on SageMaker Notebook Instance using `ml.g4dn.xlarge`**"
    ]
   },
   {
@@ -106,38 +106,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: \"sam\"\r\n",
-      "backend: \"python\"\r\n",
-      "max_batch_size: 8\r\n",
-      "input [\r\n",
-      "  {\r\n",
-      "    name: \"image\"\r\n",
-      "    data_type: TYPE_STRING\r\n",
-      "    dims: [-1]\r\n",
-      "  },\r\n",
-      "  {\r\n",
-      "    name: \"gen_args\"\r\n",
-      "    data_type: TYPE_STRING\r\n",
-      "    dims: [-1]\r\n",
-      "    optional: true\r\n",
-      "  }\r\n",
-      "]\r\n",
-      "output [\r\n",
-      "  {\r\n",
-      "    name: \"generated_image\"\r\n",
-      "    data_type: TYPE_STRING    \r\n",
-      "    dims: [-1]\r\n",
-      "  }\r\n",
-      "]\r\n",
-      "instance_group [\r\n",
-      "  {\r\n",
-      "    kind: KIND_GPU\r\n",
-      "  }\r\n",
-      "]\r\n",
-      "parameters: {\r\n",
-      "  key: \"EXECUTION_ENV_PATH\",\r\n",
-      "  value: {string_value: \"/home/condpackenv/sam_env.tar.gz\"\r\n",
-      "  }\r\n",
+      "name: \"sam\"\n",
+      "backend: \"python\"\n",
+      "max_batch_size: 8\n",
+      "input [\n",
+      "  {\n",
+      "    name: \"image\"\n",
+      "    data_type: TYPE_STRING\n",
+      "    dims: [-1]\n",
+      "  },\n",
+      "  {\n",
+      "    name: \"gen_args\"\n",
+      "    data_type: TYPE_STRING\n",
+      "    dims: [-1]\n",
+      "    optional: true\n",
+      "  }\n",
+      "]\n",
+      "output [\n",
+      "  {\n",
+      "    name: \"generated_image\"\n",
+      "    data_type: TYPE_STRING    \n",
+      "    dims: [-1]\n",
+      "  }\n",
+      "]\n",
+      "instance_group [\n",
+      "  {\n",
+      "    kind: KIND_GPU\n",
+      "  }\n",
+      "]\n",
+      "parameters: {\n",
+      "  key: \"EXECUTION_ENV_PATH\",\n",
+      "  value: {string_value: \"/home/condpackenv/sam_env.tar.gz\"\n",
+      "  }\n",
       "}"
      ]
     }
@@ -176,115 +176,115 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "import json\r\n",
-      "import base64\r\n",
-      "\r\n",
-      "from PIL import Image\r\n",
-      "from six import BytesIO\r\n",
-      "\r\n",
-      "import numpy as np\r\n",
-      "import cv2\r\n",
-      "import os\r\n",
-      "\r\n",
-      "import triton_python_backend_utils as pb_utils\r\n",
-      "\r\n",
-      "from segment_anything import SamPredictor, sam_model_registry\r\n",
-      "\r\n",
-      "class TritonPythonModel:\r\n",
-      "    \r\n",
-      "    def initialize(self, args):\r\n",
-      "        self.output_dtype = pb_utils.triton_string_to_numpy(\r\n",
-      "            pb_utils.get_output_config_by_name(json.loads(args[\"model_config\"]),\r\n",
-      "                                               \"generated_image\")[\"data_type\"])\r\n",
-      "        \r\n",
-      "        self.model_dir = args['model_repository']\r\n",
-      "    \r\n",
-      "        device='cuda'\r\n",
-      "        \r\n",
-      "        sam = sam_model_registry[\"vit_h\"](checkpoint=f\"/home/models/sam_vit_h_4b8939.pth\").to(device)\r\n",
-      "        \r\n",
-      "        self.predictor = SamPredictor(sam)\r\n",
-      "\r\n",
-      "    def encode_image(self, img): \r\n",
-      "        # Convert the image to bytes\r\n",
-      "        with BytesIO() as output:\r\n",
-      "            img.save(output, format=\"JPEG\")\r\n",
-      "            img_bytes = output.getvalue()\r\n",
-      "\r\n",
-      "        return base64.b64encode(img_bytes).decode()\r\n",
-      "    \r\n",
-      "    def dilate_mask(self, mask, dilate_factor=15):\r\n",
-      "        mask = mask.astype(np.uint8)\r\n",
-      "        mask = cv2.dilate(\r\n",
-      "            mask,\r\n",
-      "            np.ones((dilate_factor, dilate_factor), np.uint8),\r\n",
-      "            iterations=1\r\n",
-      "        )\r\n",
-      "        return mask\r\n",
-      "    \r\n",
-      "    def execute(self, requests):\r\n",
-      "        responses = []\r\n",
-      "        for request in requests:\r\n",
-      "            \r\n",
-      "            ## image\r\n",
-      "            ## point_coords\r\n",
-      "            ## point_labels\r\n",
-      "            ## dilate_kernel_size\r\n",
-      "            img = pb_utils.get_input_tensor_by_name(request, \"image\")\r\n",
-      "            img_decoded = base64.b64decode(img.as_numpy()[0][0].decode())\r\n",
-      "            \r\n",
-      "            with Image.open(BytesIO(img_decoded)) as f:\r\n",
-      "                img_rgb = f.convert(\"RGB\")\r\n",
-      "                img_np_array = np.array(img_rgb)\r\n",
-      "                \r\n",
-      "            del img\r\n",
-      "            \r\n",
-      "            gen_args = pb_utils.get_input_tensor_by_name(request, \"gen_args\")\r\n",
-      "            \r\n",
-      "            gen_args_decoded = json.loads(gen_args.as_numpy()[0][0].decode())\r\n",
-      "\r\n",
-      "            del gen_args\r\n",
-      "            \r\n",
-      "            # predictor ============\r\n",
-      "            \r\n",
-      "            self.predictor.set_image(img_np_array)\r\n",
-      "            \r\n",
-      "            point_coords = np.array([gen_args_decoded[\"point_coords\"]])\r\n",
-      "            point_labels = np.array([gen_args_decoded[\"point_labels\"]])\r\n",
-      "\r\n",
-      "            masks, scores, logits = self.predictor.predict(\r\n",
-      "                point_coords=point_coords,\r\n",
-      "                point_labels=point_labels,\r\n",
-      "                multimask_output=True,\r\n",
-      "            )\r\n",
-      "            \r\n",
-      "            masks = masks.astype(np.uint8) * 255\r\n",
-      "            \r\n",
-      "            masks = [self.dilate_mask(mask, gen_args_decoded[\"dilate_kernel_size\"]) for mask in masks]\r\n",
-      "\r\n",
-      "            mask_img = Image.fromarray(masks[1].astype(np.uint8))\r\n",
-      "            output_img_bytes = self.encode_image(mask_img)\r\n",
-      "\r\n",
-      "            output_image_obj = np.array([output_img_bytes], dtype=\"object\").reshape((-1, 1))\r\n",
-      "            \r\n",
-      "#             mask_imgs = []\r\n",
-      "#             for mask in masks:\r\n",
-      "#                 mask_img = Image.fromarray(mask.astype(np.uint8))\r\n",
-      "#                 mask_imgs.append(encode_image_jpeg(mask_img))\r\n",
-      "\r\n",
-      "            \r\n",
-      "            inference_response = pb_utils.InferenceResponse(output_tensors=[\r\n",
-      "                pb_utils.Tensor(\r\n",
-      "                    \"generated_image\",\r\n",
-      "                    output_image_obj\r\n",
-      "                )\r\n",
-      "            ])\r\n",
-      "            \r\n",
-      "            responses.append(inference_response)\r\n",
-      "        \r\n",
-      "        return responses\r\n",
-      "\r\n",
-      "\r\n"
+      "import json\n",
+      "import base64\n",
+      "\n",
+      "from PIL import Image\n",
+      "from six import BytesIO\n",
+      "\n",
+      "import numpy as np\n",
+      "import cv2\n",
+      "import os\n",
+      "\n",
+      "import triton_python_backend_utils as pb_utils\n",
+      "\n",
+      "from segment_anything import SamPredictor, sam_model_registry\n",
+      "\n",
+      "class TritonPythonModel:\n",
+      "    \n",
+      "    def initialize(self, args):\n",
+      "        self.output_dtype = pb_utils.triton_string_to_numpy(\n",
+      "            pb_utils.get_output_config_by_name(json.loads(args[\"model_config\"]),\n",
+      "                                               \"generated_image\")[\"data_type\"])\n",
+      "        \n",
+      "        self.model_dir = args['model_repository']\n",
+      "    \n",
+      "        device='cuda'\n",
+      "        \n",
+      "        sam = sam_model_registry[\"vit_h\"](checkpoint=f\"/home/models/sam_vit_h_4b8939.pth\").to(device)\n",
+      "        \n",
+      "        self.predictor = SamPredictor(sam)\n",
+      "\n",
+      "    def encode_image(self, img): \n",
+      "        # Convert the image to bytes\n",
+      "        with BytesIO() as output:\n",
+      "            img.save(output, format=\"JPEG\")\n",
+      "            img_bytes = output.getvalue()\n",
+      "\n",
+      "        return base64.b64encode(img_bytes).decode()\n",
+      "    \n",
+      "    def dilate_mask(self, mask, dilate_factor=15):\n",
+      "        mask = mask.astype(np.uint8)\n",
+      "        mask = cv2.dilate(\n",
+      "            mask,\n",
+      "            np.ones((dilate_factor, dilate_factor), np.uint8),\n",
+      "            iterations=1\n",
+      "        )\n",
+      "        return mask\n",
+      "    \n",
+      "    def execute(self, requests):\n",
+      "        responses = []\n",
+      "        for request in requests:\n",
+      "            \n",
+      "            ## image\n",
+      "            ## point_coords\n",
+      "            ## point_labels\n",
+      "            ## dilate_kernel_size\n",
+      "            img = pb_utils.get_input_tensor_by_name(request, \"image\")\n",
+      "            img_decoded = base64.b64decode(img.as_numpy()[0][0].decode())\n",
+      "            \n",
+      "            with Image.open(BytesIO(img_decoded)) as f:\n",
+      "                img_rgb = f.convert(\"RGB\")\n",
+      "                img_np_array = np.array(img_rgb)\n",
+      "                \n",
+      "            del img\n",
+      "            \n",
+      "            gen_args = pb_utils.get_input_tensor_by_name(request, \"gen_args\")\n",
+      "            \n",
+      "            gen_args_decoded = json.loads(gen_args.as_numpy()[0][0].decode())\n",
+      "\n",
+      "            del gen_args\n",
+      "            \n",
+      "            # predictor ============\n",
+      "            \n",
+      "            self.predictor.set_image(img_np_array)\n",
+      "            \n",
+      "            point_coords = np.array([gen_args_decoded[\"point_coords\"]])\n",
+      "            point_labels = np.array([gen_args_decoded[\"point_labels\"]])\n",
+      "\n",
+      "            masks, scores, logits = self.predictor.predict(\n",
+      "                point_coords=point_coords,\n",
+      "                point_labels=point_labels,\n",
+      "                multimask_output=True,\n",
+      "            )\n",
+      "            \n",
+      "            masks = masks.astype(np.uint8) * 255\n",
+      "            \n",
+      "            masks = [self.dilate_mask(mask, gen_args_decoded[\"dilate_kernel_size\"]) for mask in masks]\n",
+      "\n",
+      "            mask_img = Image.fromarray(masks[1].astype(np.uint8))\n",
+      "            output_img_bytes = self.encode_image(mask_img)\n",
+      "\n",
+      "            output_image_obj = np.array([output_img_bytes], dtype=\"object\").reshape((-1, 1))\n",
+      "            \n",
+      "#             mask_imgs = []\n",
+      "#             for mask in masks:\n",
+      "#                 mask_img = Image.fromarray(mask.astype(np.uint8))\n",
+      "#                 mask_imgs.append(encode_image_jpeg(mask_img))\n",
+      "\n",
+      "            \n",
+      "            inference_response = pb_utils.InferenceResponse(output_tensors=[\n",
+      "                pb_utils.Tensor(\n",
+      "                    \"generated_image\",\n",
+      "                    output_image_obj\n",
+      "                )\n",
+      "            ])\n",
+      "            \n",
+      "            responses.append(inference_response)\n",
+      "        \n",
+      "        return responses\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -506,13 +506,7 @@
       "lama/1/lama/fetch_data/celebahq_gen_masks.sh\n",
       "lama/1/lama/LICENSE\n",
       "lama/1/lama/colab/\n",
-      "lama/1/lama/colab/LaMa_inpainting.ipynb\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "lama/1/lama/colab/LaMa_inpainting.ipynb\n",
       "lama/1/lama/configs/\n",
       "lama/1/lama/configs/eval2_segm.yaml\n",
       "lama/1/lama/configs/debug_mask_gen.yaml\n",
