finallize sd inpaint

--- a/inpainting_fill_replace/0_setup.ipynb
+++ b/inpainting_fill_replace/0_setup.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "---\n",
     "\n",
-    "This notebook will locally build a custom docker image. **It is recommended to run this example outside of SageMaker Studio**"
+    "This notebook will locally build a custom docker image. **We recommend to use pytorch kernel on SageMaker Notebook Instance using `ml.g4dn.xlarge`**"
    ]
   },
   {
@@ -154,95 +154,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7649e852",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2023-05-20 20:20:49--  https://github.com/geekyutao/Inpaint-Anything/blob/main/example/MainFramework.png\n",
-      "Resolving github.com (github.com)... 192.30.255.112\n",
-      "Connecting to github.com (github.com)|192.30.255.112|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: unspecified [text/html]\n",
-      "Saving to: ‘MainFramework.png’\n",
-      "\n",
-      "    [ <=>                                   ] 142,914     --.-K/s   in 0.03s   \n",
-      "\n",
-      "2023-05-20 20:20:49 (3.98 MB/s) - ‘MainFramework.png’ saved [142914]\n",
-      "\n",
-      "--2023-05-20 20:20:49--  https://github.com/geekyutao/Inpaint-Anything/blob/main/example/fill-anything/sample1.png\n",
-      "Resolving github.com (github.com)... 192.30.255.112\n",
-      "Connecting to github.com (github.com)|192.30.255.112|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: unspecified [text/html]\n",
-      "Saving to: ‘sample1.png’\n",
-      "\n",
-      "    [ <=>                                   ] 143,273     --.-K/s   in 0.04s   \n",
-      "\n",
-      "2023-05-20 20:20:50 (3.32 MB/s) - ‘sample1.png’ saved [143273]\n",
-      "\n",
-      "--2023-05-20 20:20:50--  https://github.com/geekyutao/Inpaint-Anything/blob/main/example/replace-anything/bus.jpeg\n",
-      "Resolving github.com (github.com)... 192.30.255.113\n",
-      "Connecting to github.com (github.com)|192.30.255.113|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: unspecified [text/html]\n",
-      "Saving to: ‘bus.jpeg’\n",
-      "\n",
-      "    [ <=>                                   ] 143,258     --.-K/s   in 0.03s   \n",
-      "\n",
-      "2023-05-20 20:20:50 (4.59 MB/s) - ‘bus.jpeg’ saved [143258]\n",
-      "\n",
-      "--2023-05-20 20:20:50--  https://github.com/geekyutao/Inpaint-Anything/blob/main/example/remove-anything/dog.jpg\n",
-      "Resolving github.com (github.com)... 192.30.255.113\n",
-      "Connecting to github.com (github.com)|192.30.255.113|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: unspecified [text/html]\n",
-      "Saving to: ‘dog.jpg’\n",
-      "\n",
-      "    [ <=>                                   ] 143,199     --.-K/s   in 0.03s   \n",
-      "\n",
-      "2023-05-20 20:20:51 (4.31 MB/s) - ‘dog.jpg’ saved [143199]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!cd statics && wget https://github.com/geekyutao/Inpaint-Anything/blob/main/example/fill-anything/sample1.png\n",
-    "!cd statics && wget https://github.com/geekyutao/Inpaint-Anything/blob/main/example/replace-anything/bus.jpeg\n",
-    "!cd statics && wget https://github.com/geekyutao/Inpaint-Anything/blob/main/example/remove-anything/dog.jpg"
+    "!cd statics && wget https://raw.githubusercontent.com/geekyutao/Inpaint-Anything/main/example/fill-anything/sample1.png\n",
+    "!cd statics && wget https://raw.githubusercontent.com/geekyutao/Inpaint-Anything/main/example/remove-anything/dog.jpg\n",
+    "!cd statics && wget https://raw.githubusercontent.com/geekyutao/Inpaint-Anything/main/example/replace-anything/bus.jpeg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "600f2627",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2023-05-20 20:20:55--  https://github.com/geekyutao/Inpaint-Anything/blob/main/utils/mask_processing.py\n",
-      "Resolving github.com (github.com)... 192.30.255.113\n",
-      "Connecting to github.com (github.com)|192.30.255.113|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: unspecified [text/html]\n",
-      "Saving to: ‘mask_processing.py.1’\n",
-      "\n",
-      "    [ <=>                                   ] 217,679     --.-K/s   in 0.03s   \n",
-      "\n",
-      "2023-05-20 20:20:56 (6.48 MB/s) - ‘mask_processing.py.1’ saved [217679]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!cd model_repo/sd_inpaint/1 && wget https://github.com/geekyutao/Inpaint-Anything/blob/main/utils/mask_processing.py"
+    "!cd model_repo/sd_inpaint/1 && wget https://raw.githubusercontent.com/geekyutao/Inpaint-Anything/main/utils/mask_processing.py"
    ]
   },
   {
@@ -413,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "147845f6",
+   "id": "1f0c0add",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -421,9 +352,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p39",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "conda_pytorch_p39"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
