--- a/inpainting_fill_replace/1_magic_fill_replace_using_genai.ipynb
+++ b/inpainting_fill_replace/1_magic_fill_replace_using_genai.ipynb
@@ -7,13 +7,15 @@
    "source": [
     "## Creative Content Assisted by Generative AI using Amazon SageMaker: Magic Fill/Replace\n",
     "---\n",
-    "In this notebook, we will demonstrate how to create a magic fill/replace tool that can erase, fill, and replace background of any object from an image using Amazon SageMaker. The capability of this tool is illustrated in the digram below:\n",
+    "In this notebook, we will extend the inpainting eraser example by replacing the LaMa model with **[Stable Diffusion (SD) Inpaint](https://huggingface.co/stabilityai/stable-diffusion-2-inpainting)**. This example not only can erase object from image, it also can fill object or replace background with a simple text prompt. The diagram below illustrated the capabilities.\n",
     "\n",
     "![magic_fill_replace](https://raw.github.com/geekyutao/Inpaint-Anything/main/example/MainFramework.png)\n",
     "\n",
-    "We will be using two models to build this solution. The first model is **[Segment Anything Model (SAM)](https://segment-anything.com/) - Apache-2.0 license** from Meta Research. We will use this model to generate a segementation mask of the object. The second model is **[Stable Diffusion (SD) Inpaint](https://huggingface.co/stabilityai/stable-diffusion-2-inpainting) - CreativeML Open RAIL++-M License** from Stabilityai. This model allows us to generate new content in the masked area with a set of text prompts.\n",
+    "To generate segmentation, we used a foundation model developed by Meta Research called **[Segment Anything Model (SAM)](https://segment-anything.com/) - Apache-2.0 license**. This model is trained on a massive dataset called SA-1B with over 11 million images and 1.1 billion segmentation masks.  This massive scale gave Sam model unprecedented ability to identify and isolate objects from an image out of the box without training.\n",
     "\n",
-    "**Note: please run the `0_setup.ipynb` notebook first before starting on this example**"
+    "To fill/replace, we will use **[Stable Diffusion (SD) Inpaint](https://huggingface.co/stabilityai/stable-diffusion-2-inpainting) - CreativeML Open RAIL++-M License** model from Stabilityai. This model does image-to-image, but also allows you to supply a mask. The model take the entire image as context and generate the mask region according to a set of text prompts.\n",
+    "\n",
+    "**Note: please run the `0_setup.ipynb` notebook first before starting on this example. We recommend to use pytorch kernel on SageMaker Notebook Instance using `ml.g4dn.xlarge`**"
    ]
   },
   {
@@ -551,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab07def",
+   "id": "1148052d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -559,9 +561,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p39",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "conda_pytorch_p39"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -573,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
