--- a/inpainting_eraser/0_setup.ipynb
+++ b/inpainting_eraser/0_setup.ipynb
@@ -30,9 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -Uq nvidia-pyindex \n",
-    "!pip install -Uq sagemaker\n",
-    "!pip install -Uq gradio"
+    "!pip install -Uq sagemaker"
    ]
   },
   {
@@ -184,8 +182,8 @@
    },
    "outputs": [],
    "source": [
-    "!cd statics && wget https://github.com/geekyutao/Inpaint-Anything/blob/main/example/fill-anything/sample1.png\n",
-    "!cd statics && wget https://github.com/geekyutao/Inpaint-Anything/blob/main/example/remove-anything/dog.jpg"
+    "!cd statics && wget https://raw.githubusercontent.com/geekyutao/Inpaint-Anything/main/example/fill-anything/sample1.png\n",
+    "!cd statics && wget https://raw.githubusercontent.com/geekyutao/Inpaint-Anything/main/example/remove-anything/dog.jpg"
    ]
   },
   {
@@ -207,14 +205,16 @@
    },
    "outputs": [],
    "source": [
-    "!cd docker && bash sam_conda_dependencies.sh "
+    "!cd docker && bash sam_conda_dependencies.sh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "df1cf46f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "!cd docker && bash lama_conda_dependencies.sh"
@@ -366,9 +366,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p39",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "conda_pytorch_p39"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -380,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
