add step to prep docker env

--- a/inpainting_eraser/0_setup.ipynb
+++ b/inpainting_eraser/0_setup.ipynb
@@ -188,6 +188,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f64f1dcc",
+   "metadata": {},
+   "source": [
+    "### Docker Environment Preparation\n",
+    "Because the volume size of container may be larger than the available size in root directory of the notebook instance, we need to put the directory of docker data into the ```/home/ec2-user/SageMaker/docker``` directory.\n",
+    "\n",
+    "By default, the root directory of docker is set as ```/var/lib/docker/```. We need to change the directory of docker to ```/home/ec2-user/SageMaker/docker```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b942da4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat /etc/docker/daemon.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3dbae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!bash ./prepare-docker.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "61077561",
    "metadata": {},
    "source": [
